--- a/style.css
+++ b/style.css
@@ -91,3 +91,12 @@ button:active {
 .carousel-image.active {
   display: block;
 }
+
+.compra {
+  display: grid;
+}
+
+.compra>* {
+  margin: auto;
+  margin-top: 10px;
+}
