--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ button:active {
   justify-content: center;
 }
 
+
 .carousel-container img{
   width: 250px;
   height: 300px;
@@ -77,7 +78,7 @@ button:active {
   margin-top: -20px; 
   padding: 8px;
   color: white;
-  font-size: 24px;  
+  font-size: 24px; 
   user-select: none;
   background-color: rgba(0, 0, 0, 0.5);
   transition: 0.6s ease;
@@ -85,5 +86,11 @@ button:active {
   text-align: center;
   text-decoration: none;
 }
+
+.next {
+  right: 0;
+  left: auto;
+}
+
 
 
