--- a/style.css
+++ b/style.css
@@ -63,9 +63,7 @@ button:active {
   height: 300px;
 }
 
-.logo{
-  width: 400px;
-}
+
 
 body {
   background-image: url('ruta-de-tu-imagen.jpg');
@@ -99,9 +97,6 @@ body {
   left: auto;
 }
 
-
-
-
 .carousel-image.active {
   display: block;
 }
@@ -113,4 +108,42 @@ body {
 .compra>* {
   margin: auto;
   margin-top: 10px;
+}
+
+.footer{
+  color: wheat;
+}
+
+.maps{
+  width: 20px;
+  height: 20px;
+}
+
+.footer {
+  background-color: #007bff;
+  color: #fff;
+  padding: 20px 0;
+  text-align: center; 
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.footer-content {
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
+}
+
+.maps {
+  max-width: 20px; 
+  margin-right: 10px; 
+}
+
+
+.footer p {
+  margin: 0; 
 }
