--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ button:active {
 }
 
 
-.carousel-container img{
+.carousel-container img {
   width: 250px;
   height: 300px;
 }
@@ -69,9 +69,12 @@ hr {
 
 body {
   background-image: url('ruta-de-tu-imagen.jpg');
-  background-size: cover; /* Ajusta la imagen para cubrir todo el fondo */
-  background-repeat: no-repeat; /* Evita que la imagen se repita */
-  background-attachment: fixed; /* Fija la imagen en el fondo */
+  background-size: cover;
+  /* Ajusta la imagen para cubrir todo el fondo */
+  background-repeat: no-repeat;
+  /* Evita que la imagen se repita */
+  background-attachment: fixed;
+  /* Fija la imagen en el fondo */
 }
 
 .prev,
@@ -79,17 +82,17 @@ body {
   cursor: pointer;
   position: absolute;
   top: 50%;
-  width: 40px; 
-  height: 40px; 
-  line-height: 40px; 
-  margin-top: -20px; 
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  margin-top: -20px;
   padding: 8px;
   color: white;
-  font-size: 24px; 
+  font-size: 24px;
   user-select: none;
   background-color: rgba(0, 0, 0, 0.5);
   transition: 0.6s ease;
-  border-radius: 50%; 
+  border-radius: 50%;
   text-align: center;
   text-decoration: none;
 }
@@ -103,11 +106,11 @@ body {
   display: block;
 }
 
-.footer{
+.footer {
   color: wheat;
 }
 
-.maps{
+.maps {
   width: 20px;
   height: 20px;
 }
@@ -116,7 +119,7 @@ body {
   background-color: #007bff;
   color: #fff;
   padding: 20px 0;
-  text-align: center; 
+  text-align: center;
 }
 
 .container {
@@ -126,25 +129,39 @@ body {
 }
 
 .footer-content {
-  display: flex; 
-  align-items: center; 
-  justify-content: center; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .maps {
-  max-width: 20px; 
-  margin-right: 10px; 
+  max-width: 20px;
+  margin-right: 10px;
 }
 
 
 .footer p {
-  margin: 0; 
+  margin: 0;
 }
 
 /*PAGINA DE TIENDA*/
 
+.producte {
+  display: flex;
+  margin-top: 10px;
+}
+
+.t-titol, .t-data {
+  display: block;
+}
+
 .t-titol {
-  
+  margin-top: 0px;
+  display: inline;
+  margin-left: auto;
+  margin-right: 5px;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 /*PAGINA DE COMPRA*/
