--- a/style.css
+++ b/style.css
@@ -149,6 +149,7 @@ body {
 .producte {
   display: flex;
   margin-top: 10px;
+  align-items: flex-start; /* Alinea los elementos en la parte superior */
 }
 
 .t-titol, .t-data {
@@ -157,12 +158,15 @@ body {
 
 .t-titol {
   margin-top: 0px;
-  display: inline;
-  margin-left: auto;
-  margin-right: 5px;
   white-space: nowrap;
   overflow: hidden;
+  text-overflow: ellipsis; /* Opcional: agrega puntos suspensivos si el texto es muy largo y se desborda */
 }
+
+.t-data {
+  margin-top: 5px; /* Espacio entre t-titol y t-data */
+}
+
 
 /*PAGINA DE COMPRA*/
 
