--- a/style.css
+++ b/style.css
@@ -68,15 +68,6 @@ button:active {
   height: 300px;
 }
 
-
-
-body {
-  background-image: url('ruta-de-tu-imagen.jpg');
-  background-size: cover; /* Ajusta la imagen para cubrir todo el fondo */
-  background-repeat: no-repeat; /* Evita que la imagen se repita */
-  background-attachment: fixed; /* Fija la imagen en el fondo */
-}
-
 .prev,
 .next {
   cursor: pointer;
@@ -114,9 +105,11 @@ body {
   margin: auto;
   margin-top: 10px;
 }
-
-.footer{
-  color: wheat;
+/*FOOTER*/
+footer{
+  background-color: #000;
+  color: #fff;
+  margin-top: auto;
 }
 
 .icon {
