--- a/style.css
+++ b/style.css
@@ -1,37 +1,49 @@
-.logo{
-  height: 150px;
-  width: 250px;
+body{
+  background-color: #EDDFCA;
 }
 
+/*BOTO ANIMAT*/
 button {
-  padding: 1.3em 3em;
-  font-size: 12px;
-  text-transform: uppercase;
-  letter-spacing: 2.5px;
-  font-weight: 500;
-  color: #000;
-  background-color: #fff;
-  border: none;
-  border-radius: 45px;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease 0s;
-  cursor: pointer;
+  padding: 15px 30px;
+  font-size: 18px;
   outline: none;
+  border: none;
+  border-radius: 10px;
+  transition: 0.5s;
+  background: #1e1e1e;
+  color: greenyellow;
+  box-shadow: 0 0 10px #363636, inset 0 0 10px #363636;
 }
 
 button:hover {
-  background-color: #23c483;
-  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
-  color: #fff;
-  transform: translateY(-7px);
+  animation: a 0.5s 1 linear;
 }
 
-button:active {
-  transform: translateY(-1px);
+@keyframes a {
+  0% {
+    transform: scale(0.7, 1.3);
+  }
+
+  25% {
+    transform: scale(1.3, 0.7);
+  }
+
+  50% {
+    transform: scale(0.7, 1.3);
+  }
+
+  75% {
+    transform: scale(1.3, 0.7);
+  }
+
+  100% {
+    transform: scale(1, 1);
+  }
 }
+
 
 .portada {
-  background-color: black;
+  background-color: #D09E73;
   color: white;
 }
 
@@ -107,7 +119,7 @@ button:active {
 }
 /*FOOTER*/
 footer{
-  background-color: #000;
+  background-color: #D09E73;
   color: #fff;
   margin-top: auto;
 }
