--- a/style.css
+++ b/style.css
@@ -117,3 +117,53 @@ footer{
   height: 20px;
   margin: 0; 
 }
+
+
+/*TIENDA*/
+
+.container-product {
+  display: grid;
+  grid-template-areas: "image info";
+  grid-template-columns: 200px 1fr; /* 200px para la imagen, el resto para la información */
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.product__image {
+  grid-area: image;
+  width: 200px;
+  height: auto;
+}
+
+
+.product__info {
+  grid-area: info;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+
+.product__name {
+  font-size: 24px;
+  margin: 0;
+}
+
+.product__year {
+  font-size: 18px;
+  margin: 0;
+}
+
+.product__price {
+  font-size: 18px;
+  margin: 0;
+}
+
+.product__price-icon {
+  width: 15px;
+  height: auto;
+  margin-right: 5px;
+}
+
+.products__products{
+  display: inline-flex;
+}
