--- a/style.css
+++ b/style.css
@@ -153,37 +153,94 @@ body {
   margin: 0;
 }
 
-/*PAGINA DE COMPRA*/
+/*PAGINA DE TIENDA*/
 
-.compra {
+.container-product {
   display: grid;
-  max-height: 100vw;
+  grid-template-areas: "image info";
+  grid-template-columns: 200px 1fr; /* 200px para la imagen, el resto para la información */
+  align-items: center;
+  margin-bottom: 20px;
 }
 
-.compra>* {
-  margin: auto;
-  margin-top: 10px;
+.product__image {
+  grid-area: image;
+  width: 200px;
+  height: auto;
+}
+
+
+.product__info {
+  grid-area: info;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+
+.product__name {
+  font-size: 24px;
+  margin: 0;
+}
+
+.product__year {
+  font-size: 18px;
+  margin: 0;
+}
+
+.product__price {
+  font-size: 18px;
+  margin: 0;
+}
+
+.product__price-icon {
+  width: 15px;
+  height: auto;
+  margin-right: 5px;
+}
+
+.products__products{
+  display: inline-flex;
+}
+
+/*PAGINA DE COMPRA*/
+
+.container-compra {
+  height: 100vh;
+  overflow: auto;
+  margin: 0px;
+}
+
+.compra {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-height: 100vh;
+  max-width: 100vw;
+  margin: 0px;
+}
+
+.compra > * {
+  margin: 10px;
 }
 
 .img-carrito {
-  display: flex;
-  height: 100px;
   width: 100px;
+  height: 100px;
 }
 
 .compra-cantitat {
-  display: inline;
   display: flex;
+  align-items: center;
 }
 
 .compra-cantitat input {
   height: 20px;
-  display: flex;
 }
 
-.compra-footer img {
-  display: inline-block;
-  margin-left: 5px;
+.img-cart {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
 }
 
 /*FOOTER*/
