--- a/style.css
+++ b/style.css
@@ -154,21 +154,19 @@ body {
 }
 
 /*PAGINA DE TIENDA*/
-
 .container-product {
   display: grid;
   grid-template-areas: "image info";
-  grid-template-columns: 200px 1fr; /* 200px para la imagen, el resto para la información */
+  grid-template-columns: 200px 1fr 1fr; /* 200px para la imagen, el resto para la información */
   align-items: center;
   margin-bottom: 20px;
 }
 
 .product__image {
   grid-area: image;
-  width: 200px;
+  width: 150px;
   height: auto;
 }
-
 
 .product__info {
   grid-area: info;
@@ -178,30 +176,67 @@ body {
 }
 
 .product__name {
-  font-size: 24px;
+  font-size: 16px;
   margin: 0;
+  margin-bottom: 10px;
 }
 
 .product__year {
   font-size: 18px;
   margin: 0;
+  margin-bottom: 10px;
 }
 
 .product__price {
   font-size: 18px;
   margin: 0;
+  margin-bottom: 10px;
 }
 
 .product__price-icon {
   width: 15px;
   height: auto;
-  margin-right: 5px;
 }
 
 .products__products{
   display: inline-flex;
 }
 
+.product__addtocart-icon{
+  width: 125px;
+  height: 75px;
+}
+
+.product__addtocart{
+  width: 225px;
+  height: 75px;
+  display: inline-flex;
+}
+
+.product__addtocart-button__sumar{
+  width: 20px;
+  height: 20px;
+  text-align: center;
+}
+
+.product__addtocart-button__restar{
+  width: 20px;
+  height: 20px;
+  text-align: center;
+}
+
+.product__addtocart-button{
+  height: 50px;
+  width: 100px;
+  margin-top: 25px;
+  margin-left: 5px;
+  display: inline-flex;
+}
+
+.product__adtocart-input__number{
+  width: 35px;
+  height: 15px;
+}
 /*PAGINA DE COMPRA*/
 
 .container-compra {
