--- a/css/newCSS.css
+++ b/css/newCSS.css
@@ -1,87 +1,153 @@
 :root {
-    --background: rgb(0, 0, 0);
+    --main-bg-color: black;
 }
 
-/* PRODUCTS STARTS */
-.products-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+img {
+    display: block;
 }
 
-.product__image {
-    grid-area: image;
-    width: 150px;
-    position: relative;
-    /* height: auto; */
-}
-
-.products {
-    /* margin: auto; */
-    /* text-align: center; */
-}
-
-.product__addtocart {
-    width: 50%;
-}
-
-.product__addtocart-button {
-    display: flex;
-    flex-direction: row;
-    /* text-align: center; */
-    justify-content: center;
-}
-
-.product__adtocart-input__number {
-    width: 100%;
-}
-
-.product__addtocart-icon {
-    width: 125px;
-    height: 75px;
-}
-
-.product__price {
-    /* position: absolute; */
-}
-
-/* PRODUCTS ENDS */
-
-/* HEADER STARTS */
-.header {
-    display: inline-flex;
+/* HEADER STYLE STARTS */
+header {
     position: sticky;
     top: 0;
-    background-color: var(--background);
-    z-index: 1;
+    z-index: 100;
+}
+
+.header {
+    display: grid;
+    grid-template-areas: 'logo input';
+    grid-template-columns: .2fr .8fr;
+    background-color: var(--main-bg-color);
+    place-items: center;
 }
 
 .header__logo {
+    grid-area: logo;
     filter: invert();
 }
 
 .search-container {
-    position: relative;
-    padding: 15px;
-    width: 300px;
+    text-align: center;
+    grid-area: input;
+    width: 100%;
 }
 
-.search-input {
-    width: 240px;
-    padding: 10px;
-    border: 2px solid #ccc;
-    border-radius: 20px;
-    background-color: var(--background);
-    color: white;
-}
-
-.search-icon {
-    position: absolute;
-    top: 40%;
-    width: 30px;
-    margin-left: 10px;
-    right: 18%;
-    transform: translateY(-50%);
+.search-container input {
+    width: 95%;
     filter: invert();
+    border: solid black 1px;
+    border-radius: 10px;
+    height: 2rem;
+    position: relative;
+    padding-left: 10px;
 }
 
-/* HEADER ENDS */
+
+.search-container img {
+    filter: invert();
+    position: absolute;
+    /* top: 50%; */
+    left: 90%;
+    top: 30%;
+    width: 1.5rem;
+}
+
+/* HEADER STYLE ENDS */
+
+
+/* SHOP STYLE STARTS */
+.tienda {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: .3%;
+}
+
+.cd-image-container {
+    position: relative;
+}
+
+.cd-price {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 5px;
+    margin: 0;
+    transform: translateY(0px);
+    transition: transform .25s;
+}
+
+.cd-image-container:hover>.cd-price {
+    transform: translateY(-10px);
+}
+
+.add-to-cart-img {
+    width: 7.5rem;
+}
+
+.cd-name {
+    font-variant: small-caps;
+    font-weight: bold;
+    font-size: .9rem;
+}
+
+.cd-info {
+    color: gray;
+    font-size: .7rem;
+}
+
+.add-to-cart-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 0;
+}
+
+/* SHOP STYLE ENDS */
+
+/* FOOTER STYLE STARTS */
+
+.container-footer {
+    margin-top: 2rem;
+}
+
+.button-container {
+    display: flex;
+    background-color: var(--main-bg-color);
+    width: 100%;
+    height: 50px;
+    align-items: center;
+    justify-content: space-around;
+    /* border-radius: 10px; */
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px,
+        rgba(88, 203, 244, 0.5) 5px 10px 15px;
+    position: fixed;
+    /* Esto fija el contenedor en la parte superior de la página */
+    bottom: 0;
+    left: 2;
+    padding-bottom: 5px;
+}
+
+.button {
+    outline: 0 !important;
+    border: 0 !important;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    transition: all ease-in-out 0.3s;
+    cursor: pointer;
+}
+
+.button:hover {
+    transform: translateY(-3px);
+}
+
+.icon {
+    font-size: 20px;
+}
+
+/* FOOTER STYLE ENDS */
