--- a/css/newCSS.css
+++ b/css/newCSS.css
@@ -77,6 +77,24 @@ header {
     transition: transform .25s;
 }
 
+.in-cart {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0;
+    padding: 5px;
+    width: 20%;
+    background-color: red;
+    transform: rotateZ(45deg);
+    overflow: hidden;
+    /* opacity: 0; */
+}
+
+.in-cart img {
+    filter: invert();
+
+}
+
 .cd-image-container:hover>.cd-price {
     transform: translateY(-10px);
 }
@@ -102,10 +120,10 @@ header {
     margin-top: 0;
 }
 
+
 /* SHOP STYLE ENDS */
 
 /* FOOTER STYLE STARTS */
-
 .container-footer {
     margin-top: 2rem;
 }
