--- a/css/newCSS.css
+++ b/css/newCSS.css
@@ -56,6 +56,14 @@ header {
 
 
 /* SHOP STYLE STARTS */
+.product-container {
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
+
 .tienda {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -84,15 +92,17 @@ header {
     margin: 0;
     padding: 5px;
     width: 20%;
-    background-color: red;
-    transform: rotateZ(45deg);
-    overflow: hidden;
-    /* opacity: 0; */
+    background-color: rgb(255, 174, 0);
+    opacity: 0;
+    transition: opacity 0.25s;
 }
 
 .in-cart img {
     filter: invert();
+}
 
+.bought {
+    opacity: 1;
 }
 
 .cd-image-container:hover>.cd-price {
@@ -101,6 +111,7 @@ header {
 
 .add-to-cart-img {
     width: 7.5rem;
+    bottom: 0;
 }
 
 .cd-name {
