updating ticket + ticket_lines + user modal

--- a/css/newCSS.css
+++ b/css/newCSS.css
@@ -226,6 +226,19 @@ header {
     bottom: 0;
 }
 
+/* .payment-container {
+    display: flex;
+    justify-content: center;
+    height: 30vh;
+    background-color: red;
+}
+
+.confirm_payment {
+    display: inline-block;
+    text-align: center;
+    width: 90%;
+} */
+
 /* CARRO STYLE ENDS */
 
 /* FOOTER STYLE STARTS */
@@ -250,7 +263,7 @@ header {
     padding-bottom: 5px;
 }
 
-.button {
+.button-footer {
     outline: 0 !important;
     border: 0 !important;
     width: 40px;
@@ -265,7 +278,7 @@ header {
     cursor: pointer;
 }
 
-.button:hover {
+.button-footer:hover {
     transform: translateY(-3px);
 }
 
