--- a/css/newCSS.css
+++ b/css/newCSS.css
@@ -8,6 +8,47 @@ img {
     display: block;
 }
 
+/* LANDING PAGE STARTS */
+.header-landing {
+    display: grid;
+    grid-template-columns: 3fr .5fr;
+    justify-content: center;
+    place-items: center;
+}
+
+.landing-logo {
+    filter: invert();
+}
+
+.landing-page {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.landing-container {
+    text-align: center;
+}
+
+.landing-container input {
+    width: 90%;
+}
+
+.landing-container img {
+    width: 90%;
+    margin: auto;
+}
+
+.landing-container>* {
+    padding: 10px;
+    margin: 10px;
+}
+
+/* LANDING PAGE ENDS */
+
 /* HEADER STYLE STARTS */
 header {
     position: sticky;
@@ -143,6 +184,7 @@ header {
     display: flex;
     justify-content: center;
     margin-top: 0;
+    margin-bottom: 10px;
     transform: translateY(0);
     transition: transform .2s;
     background: none;
@@ -288,7 +330,7 @@ header {
     position: relative;
 }
 
-.button-footer:hover {
+.button-footer:hover:enabled {
     transform: translateY(-3px);
     color: var(--icon-color);
 }
