--- a/css/newCSS.css
+++ b/css/newCSS.css
@@ -184,6 +184,7 @@ header {
 
 .bought {
     opacity: 1;
+    background-color: red;
 }
 
 .cd-image-container:hover>.cd-price {
@@ -214,6 +215,7 @@ header {
     margin-top: 0;
     margin-bottom: 10px;
     transform: translateY(0);
+    transform: scale(1);
     transition: transform .2s;
     background: none;
     border: none;
@@ -225,7 +227,12 @@ header {
     bottom: 0;
 }
 
+.add-to-cart-container:hover {
+    transform: scale(1.1);
+}
+
 .add-to-cart-container:active {
+    transform: scale(1.1);
     transform: translateY(-10px);
 }
 
