--- a/css/newCSS.css
+++ b/css/newCSS.css
@@ -9,6 +9,19 @@ img {
 }
 
 /* LANDING PAGE STARTS */
+.landing-container {
+    width: 100%;
+    text-align: center;
+}
+
+.landing-container form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    width: 100%;
+}
+
 .header-landing {
     display: grid;
     grid-template-columns: 3fr .5fr;
@@ -20,6 +33,8 @@ img {
     filter: invert();
 }
 
+.landing-form {}
+
 .landing-page {
 
     display: flex;
@@ -29,18 +44,6 @@ img {
     height: 100%;
 }
 
-.landing-container {
-    text-align: center;
-}
-
-.landing-container input {
-    width: 90%;
-}
-
-.landing-container img {
-    width: 90%;
-    margin: auto;
-}
 
 .landing-container>* {
     padding: 10px;
