--- a/css/newCSS.css
+++ b/css/newCSS.css
@@ -486,10 +486,6 @@ header {
     width: 20%;
 }
 
-.deleteCart {
-    margin-left: auto;
-    margin-right: .3rem;
-}
 
 .carro.total-price {
     margin-left: 1rem;
@@ -502,6 +498,53 @@ header {
 .checkout-btn-container button {
     width: 100%;
 }
+
+.btn-deleteCart {
+    background-color: transparent;
+    position: relative;
+    border: none;
+    left: 25%;
+  }
+  
+  .btn-deleteCart::after {
+    content: 'delete';
+    position: absolute;
+    top: -130%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: fit-content;
+    height: fit-content;
+    background-color: rgb(168, 7, 7);
+    padding: 4px 8px;
+    border-radius: 5px;
+    transition: .2s linear;
+    transition-delay: .2s;
+    color: white;
+    text-transform: uppercase;
+    font-size: 12px;
+    opacity: 0;
+    visibility: hidden;
+  }
+  
+  .icon {
+    transform: scale(1.2);
+    transition: .2s linear;
+  }
+  
+  .btn-deleteCart:hover > .icon {
+    transform: scale(1.3);
+  }
+  
+  .btn-deleteCart:hover > .icon path {
+    fill: rgb(168, 7, 7);
+  }
+  
+  .btn-deleteCart:hover::after {
+    visibility: visible;
+    opacity: 1;
+    top: -130%;
+  }
+  
 
 /* CARRO STYLE ENDS */
 
