arreglo de errors

--- a/css/newCSS.css
+++ b/css/newCSS.css
@@ -56,6 +56,10 @@ img {
   color: black !important;
 }
 
+.input::placeholder {
+  color: black;
+}
+
 /* LANDING PAGE ENDS */
 
 /* CHECK ORDER STYLE STARTS */
