--- a/css/newCSS.css
+++ b/css/newCSS.css
@@ -174,6 +174,30 @@ header {
   background-color: black;
 }
 
+.profile{
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height ease 1s;
+  width: 100%;
+  text-align: left;
+  display: grid;
+  grid-template-columns: 1fr;
+  row-gap: .2rem;
+  padding: 0 10px 0;
+  background-color: whitesmoke;
+}
+
+.profile select {
+  font-variant: small-caps;
+  text-align: center;
+  border: 1px gray solid;
+  height: 3rem;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+}
+
+.show{
+  max-height: 150px;
+}
 
 .fetch-info {
   font-size: .8rem;
