--- a/css/carrousel.css
+++ b/css/carrousel.css
@@ -75,6 +75,11 @@
     cursor: pointer;
 }
 
+.content-carrousel button {
+    border: none;
+    padding: 0;
+}
+
 .content-carrousel figure {
     width: 100%;
     height: 170px;
