--- a/css/newCSS.css
+++ b/css/newCSS.css
@@ -37,7 +37,7 @@ img {
 
 .header-landing {
   display: grid;
-  grid-template-columns: 3fr 0.5fr;
+  /* grid-template-columns: 3fr 0.5fr; */
   justify-content: center;
   place-items: center;
 }
