--- a/laravel/public/css/products.css
+++ b/laravel/public/css/products.css
@@ -63,13 +63,13 @@ hr {
 /* Listado */
 
 /* Estilos para la lista de productos */
-ul {
+.ul-llista {
     list-style-type: none;
     /* Quita los marcadores de lista */
     padding: 0;
 }
 
-li {
+.li-product {
     margin: 10px 0;
     padding: 10px;
     background-color: #f5f5f5;
@@ -81,7 +81,7 @@ li {
     transition: background-color 0.3s, transform 0.2s;
 }
 
-li:hover {
+.li-product:hover {
     background-color: #0074d9;
     /* Color de fondo al pasar el ratón */
     color: white;
@@ -89,14 +89,21 @@ li:hover {
     transform: scale(1.02);
     /* Escalar ligeramente en el hover */
     cursor: pointer;
+
 }
 
-a {
+.a-products {
     text-decoration: none;
     /* Quita el subrayado de los enlaces */
-    color: inherit;
+    color: rgb(38, 35, 35);
     /* Hereda el color del texto del elemento padre */
+
 }
+
+.a-products:hover {
+    color: whitesmoke;
+}
+
 
 /* Estilos para el título de la lista de productos */
 h1 {
@@ -154,4 +161,16 @@ hr {
     .label {
         font-size: 14px;
     }
+}
+
+.tickets-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 90vh;
+}
+
+.container.tickets {
+    flex-grow: inherit;
 }
