--- a/laravel/public/css/welcome.css
+++ b/laravel/public/css/welcome.css
@@ -1,7 +1,4 @@
 body {
-    margin: 0;
-    padding: 0;
-    background: #111;
     font-family: Arial, sans-serif;
     display: flex;
     flex-direction: column;
@@ -12,9 +9,10 @@ body {
     color: #e3dddc;
 }
 
-h1 {
+.welcome {
     color: #e3dddc;
     font-size: 48px;
+
     opacity: 1;
     z-index: 100;
     font-family: 'Times New Roman', Times, serif;
